add questions in bulk
